# sqlx-pg-migrate

./: Cargo.toml  license  readme.md
.github/workflows/: build.yml
migrations/: 001_create_users.sql  002_add_rows.sql
src/: lib.rs
