[package]
name = "sqlx-pg-migrate"
version = "1.2.0"
authors = ["Naitik Shah <n@daaku.org>"]
edition = "2021"
description = "A library to run migrations on a PostgreSQL database using SQLx."
readme = "readme.md"
repository = "https://github.com/daaku/sqlx-pg-migrate"
keywords = ["sql", "migrations"]
categories = []
license = "MIT"

[dependencies]
include_dir = { version = "0.7", features = ["glob"] }
sqlx = { version = "0.5", default-features = false, features = ["postgres"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.16", features = ["rt", "macros"] }
sqlx = { version = "0.5", default-features = false, features = ["postgres", "runtime-tokio-native-tls"] }
